# santabpf

./: .gitignore  .tool-versions  LICENSE  README.md  pyproject.toml  wakeup.sh
.unused/2-network_bandwidth_hogger/: test-client.go
1-short_lived_job/: README.md  gen-shortlived-jobs.sh
2-httpd_max_clients/: README.md  run.sh
2-httpd_max_clients/test-app/: Dockerfile
2-httpd_max_clients/test-httpd/: gen_dummy_data.sh
2-network_bandwidth_hogger/: test-server.go
3-memory_thrashing/: Dockerfile  dummy-data.json  entrypoint.sh  monitor-wt.sh  run.sh
3-memory_thrashing/test-app/: Dockerfile  dummy-data.json  entrypoint.sh
3-wiredTiger_cache_size/: lower_available_memory_size.sh  reset_available_memory_size.sh
3-wiredTiger_cache_size/test-app/: Dockerfile
PoC/1-short_lived_job/: README.md
PoC/2-httpd_max_clients/: run.sh
PoC/3-wiredTiger_cache_size/: README.md  lower_available_memory_size.sh  run.sh
PoC/4-page_cache/: lower_available_memory_size.sh  reset_available_memory_size.sh  run.sh
configure/: ubuntu_link_bpfcc.sh
deployments/: deploy.sh  docker-compose.yml  list_services.sh  tail_log.sh
deployments/netdata/: Dockerfile  debug.sh  deploy.sh  netdata.conf  python.d.conf
docs/: ADD-NEW-ALARM.md  ADD-NEW-PLUGIN.md  API.md  CONTRIBUTING.ko.md  GLOSSARY.md  STRESS.md
front/: leechiyun  new-dashboard.html
front/choijiwon/: frontfile  (+2 more)
netdata/: apply.sh  down.sh  log.sh  up.sh  values.yaml
plugin/: santabpf.chart.py
prometheus/: run_prometheus.sh
src/: TODO.md  config.yml  main.py  pyproject.toml
util/: test-client.go  test-server.go
(+81 files in other folders)
